--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -11,7 +11,7 @@ header {
   /* header styles */
 }
 .card {
-  width: 600px;
+  width: 300px;
   height: 600px;
   padding: 20px;
   border: 1px solid #c9c9c9;
@@ -19,6 +19,11 @@ header {
   background-repeat: no-repeat;
   background-size: 100px;
 }
+
+.card:hover {
+  background-color: yellow;
+}
+
 #main {
   display: flex;
   flex-direction: column;
