adding initial message

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -75,6 +75,10 @@ h1 {
 .card:hover {
   background-color: white;
 }
+#initialmessage {
+  margin: auto;
+  text-align: center;
+}
 
 #main {
   display: flex;
