--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -80,6 +80,15 @@ h1 {
   text-align: center;
 }
 
+.infocontainer {
+  border: 3px solid white;
+  border-radius: 10px;
+  padding: 3px;
+  margin: 3px;
+  margin: 3px;
+  text-align: center;
+}
+
 #main {
   display: flex;
   flex-direction: column;
