--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -73,16 +73,18 @@ h1 {
 }
 
 .card:hover {
-  background-color: white;
+  color: white;
 }
 #initialmessage {
   margin: auto;
+  font-family: emoji;
   text-align: center;
+  font-size: 3rem;
 }
 
 .infocontainer {
   border: 3px solid white;
-  border-radius: 10px;
+  border-radius: 40px;
   padding: 3px;
   margin: 3px;
   margin: 3px;
